# DataTransferer

./: CMakeLists.txt  Untitled Diagram.drawio  data.hpp  http_req.hpp  json_converter.hpp  main.cpp  requests.h
